@@ -1,9 +1,10 @@
-NEXT RELEASE (Change that when releasing)
+*IN-DEVELOPEMENT*
 ----------------
 Make licence explicit: it is GPLv3 as per the conditions of the source
     code dump from Epsitec.
 Fix URL of colobot repository.
 Render README for Markdown.
+Ease git-based releasing.
 
 ----------------
 2012-10-05
